--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="projectn">
         <div class="necard" onclick="window.location.href='itwrk.html'">
           <h3>My IT-Related Work</h3>
-          <img src="itit.png" alt="couldn't load image, refresh the page">
+          <img src="lupc.png"  alt="couldn't load image, refresh the page" style="border: 0px; box-shadow: none;">
         </div>
 
 
