--- a/photowrk.html
+++ b/photowrk.html
@@ -231,7 +231,11 @@
     <a href="#portfolio-grid" class="close">&times;</a>
     <img src="https://drive.google.com/thumbnail?id=1jHegbAPYV4fDIV8xAQs6bu7pgU-hRflV&sz=s5000" alt="Loading"> 
 </div>
-
+<footer>
+    <div class="container">
+      <p>&copy; 2025 Bihandu Sathmira. All rights reserved.</p>
+    </div>
+  </footer>
 <!--  
     <section class="portfolio">
     <div class="container">
