vido wrk n stuff

--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
         <div class="necard">
           <h3>Non-IT related work</h3>
           <div class="card" onclick="window.location.href='photowrk.html'">
-            <p>My Photography/ Videography work</p>
+            <p>My Photography work</p>
           
           </div>
+          <br>
+          <div class="card" onclick="window.location.href='photowrk.html'">
+            <p>My Videography work</p>
+          
+          </div>
+
 <br>
           <div class="card" onclick="window.location.href='musicwrk.html'">
             <p>>My Music related work</p>
