--- a/photowrk.html
+++ b/photowrk.html
@@ -29,13 +29,19 @@
 <a href="#img8" class="portfolio-item">
     <img src="https://drive.google.com/thumbnail?id=1hmi-9nddEOoGWwIvjgROnjtyyQ5292TF&sz=s700" alt="image is not loading, please refresh the page" style="width: 100%; height: auto;"> 
 </a>
+<a href="#img6" class="portfolio-item">
+    <img src="https://drive.google.com/thumbnail?id=1Nh2ij4r6AeV_aYXmbGlMpZVUjG--39YX&sz=s700" alt="image is not loading, please refresh the page" style="width: 100%; height: auto;"> 
+</a>
+
+<a href="#img5" class="portfolio-item">
+    <img src="https://drive.google.com/thumbnail?id=1ofwQKs-VJ77hhpf2x3CowN5pbUsk49lF&sz=s700" alt="image is not loading, please refresh the page" style="width: 100%; height: auto;"> 
+    </a>
 <!-- amila -->
 <a href="#img23" class="portfolio-item">
     <img src="https://drive.google.com/thumbnail?id=1zlCf0_qz8b2o25ENeIC6TpB_zH7rGOdv&sz=s700" alt="image is not loading, please refresh the page" style="width: 100%; height: auto;"> 
 </a>
-<a href="#img5" class="portfolio-item">
-    <img src="https://drive.google.com/thumbnail?id=1ofwQKs-VJ77hhpf2x3CowN5pbUsk49lF&sz=s700" alt="image is not loading, please refresh the page" style="width: 100%; height: auto;"> 
-    </a>
+
+
     <a href="#img1" class="portfolio-item">
        <img src="https://drive.google.com/thumbnail?id=143bIlrCrfazRdcE73HWSALqvrQPQcRdd&sz=s700" alt="image is not loading, please refresh the page"style="width: 100%; height: auto;">
     </a>
@@ -76,9 +82,7 @@
 <a href="#img16" class="portfolio-item">
     <img src="https://drive.google.com/thumbnail?id=1P-KVp0eXm7JDVmWnenOHpNCMc1-Hx1Qo&sz=s700" alt="image is not loading, please refresh the page" style="width: 100%; height: auto;"> 
 </a>
-<a href="#img6" class="portfolio-item">
-    <img src="https://drive.google.com/thumbnail?id=1Nh2ij4r6AeV_aYXmbGlMpZVUjG--39YX&sz=s700" alt="image is not loading, please refresh the page" style="width: 100%; height: auto;"> 
-</a>
+
 
 <a href="#img19" class="portfolio-item">
     <img src="https://drive.google.com/thumbnail?id=1Mut_qLSd2dBWNRN86qYHkfmuCj8K1QOU&sz=s700" alt="image is not loading, please refresh the page" style="width: 100%; height: auto;"> 
@@ -112,7 +116,11 @@
 <a href="#img17" class="portfolio-item">
     <img src="https://drive.google.com/thumbnail?id=1v7D9Q6xwMAfc1XvU5kptx7F6rRlER-QE&sz=s700" alt="image is not loading, please refresh the page" style="width: 100%; height: auto;"> 
 </a>
-
+<!--  
+<a href="#last" class="portfolio-item">
+    <div class="card" ></div>
+    </a>
+-->
 
 
 
