--- a/photowrk.html
+++ b/photowrk.html
@@ -36,15 +36,16 @@
 <a href="#img5" class="portfolio-item">
     <img src="https://drive.google.com/thumbnail?id=1ofwQKs-VJ77hhpf2x3CowN5pbUsk49lF&sz=s700" alt="image is not loading, please refresh the page" style="width: 100%; height: auto;"> 
     </a>
-<!-- amila -->
-<a href="#img23" class="portfolio-item">
-    <img src="https://drive.google.com/thumbnail?id=1zlCf0_qz8b2o25ENeIC6TpB_zH7rGOdv&sz=s700" alt="image is not loading, please refresh the page" style="width: 100%; height: auto;"> 
-</a>
+
 
 
     <a href="#img1" class="portfolio-item">
        <img src="https://drive.google.com/thumbnail?id=143bIlrCrfazRdcE73HWSALqvrQPQcRdd&sz=s700" alt="image is not loading, please refresh the page"style="width: 100%; height: auto;">
     </a>
+    <!-- amila -->
+<a href="#img23" class="portfolio-item">
+    <img src="https://drive.google.com/thumbnail?id=1zlCf0_qz8b2o25ENeIC6TpB_zH7rGOdv&sz=s700" alt="image is not loading, please refresh the page" style="width: 100%; height: auto;"> 
+</a>
     <!--  mihir
     <a href="#img2" class="portfolio-item">
        <img src="https://drive.google.com/thumbnail?id=1p8Hy7pedVmKQYhjPqsPv0bKLfhwvTHH2&sz=s700" alt="image is not loading, please refresh the page"style="width: 100%; height: auto;">
@@ -116,6 +117,17 @@
 <a href="#img17" class="portfolio-item">
     <img src="https://drive.google.com/thumbnail?id=1v7D9Q6xwMAfc1XvU5kptx7F6rRlER-QE&sz=s700" alt="image is not loading, please refresh the page" style="width: 100%; height: auto;"> 
 </a>
+
+<a href="#img26" class="portfolio-item">
+    <img src="https://drive.google.com/thumbnail?id=1hBqd6bn_5rArgsllAT3ebLB3PtLLrmD2&sz=s700" alt="image is not loading, please refresh the page" style="width: 100%; height: auto;"> 
+</a>
+<a href="#img27" class="portfolio-item">
+    <img src="https://drive.google.com/thumbnail?id=1Kz05O6BvWvt-AygId5-uF9xBWB1Bq92O&sz=s700" alt="image is not loading, please refresh the page" style="width: 100%; height: auto;"> 
+</a>
+<a href="#img28" class="portfolio-item">
+    <img src="https://drive.google.com/thumbnail?id=1b4m7xHNv5wVbIKOCZnT8_lIuYHESTJ8Y&sz=s700" alt="image is not loading, please refresh the page" style="width: 100%; height: auto;"> 
+</a>
+
 <!--  
 <a href="#last" class="portfolio-item">
     <div class="card" ></div>
@@ -131,114 +143,133 @@
   <!-- Modals -->
   <div id="img1" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=143bIlrCrfazRdcE73HWSALqvrQPQcRdd&sz=s5000" alt="Large View">
+    <img src="https://drive.google.com/thumbnail?id=143bIlrCrfazRdcE73HWSALqvrQPQcRdd&sz=s5000" alt="Loading failed. please refresh the page">
   </div>
 
   <div id="img2" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=1p8Hy7pedVmKQYhjPqsPv0bKLfhwvTHH2&sz=s5000" alt="Large View">
+    <img src="https://drive.google.com/thumbnail?id=1p8Hy7pedVmKQYhjPqsPv0bKLfhwvTHH2&sz=s5000" alt="Loading failed. please refresh the page">
   </div>
 
 <div id="img3" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=1gDC0UFvExoOrQSHXGzx2fQ-WaMv3SYhs&sz=s5000" alt="Loading"> 
+    <img src="https://drive.google.com/thumbnail?id=1gDC0UFvExoOrQSHXGzx2fQ-WaMv3SYhs&sz=s5000" alt="Loading failed. please refresh the page"> 
 </div>
 
 <div id="img4" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=1wEpQX3sHPFQKLuOOqsPNFUVLlfdCl_VM&sz=s5000" alt="Loading"> 
+    <img src="https://drive.google.com/thumbnail?id=1wEpQX3sHPFQKLuOOqsPNFUVLlfdCl_VM&sz=s5000" alt="Loading failed. please refresh the page"> 
 </div>
   
 <div id="img5" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=1ofwQKs-VJ77hhpf2x3CowN5pbUsk49lF&sz=s5000" alt="Loading"> 
+    <img src="https://drive.google.com/thumbnail?id=1ofwQKs-VJ77hhpf2x3CowN5pbUsk49lF&sz=s5000" alt="Loading failed. please refresh the page"> 
 </div>
 
 <div id="img6" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=1Nh2ij4r6AeV_aYXmbGlMpZVUjG--39YX&sz=s5000" alt="Loading"> 
+    <img src="https://drive.google.com/thumbnail?id=1Nh2ij4r6AeV_aYXmbGlMpZVUjG--39YX&sz=s5000" alt="Loading failed. please refresh the page"> 
 </div>
 
 <div id="img7" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=1KoEyCmQgYVT4fGR1Vy9hN1C8Rme937Vq&sz=s5000" alt="Loading"> 
+    <img src="https://drive.google.com/thumbnail?id=1KoEyCmQgYVT4fGR1Vy9hN1C8Rme937Vq&sz=s5000" alt="Loading failed. please refresh the page"> 
 </div>
 
 <div id="img8" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=1hmi-9nddEOoGWwIvjgROnjtyyQ5292TF&sz=s5000" alt="Loading"> 
+    <img src="https://drive.google.com/thumbnail?id=1hmi-9nddEOoGWwIvjgROnjtyyQ5292TF&sz=s5000" alt="Loading failed. please refresh the page"> 
 </div>
 <div id="img9" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=1sggqXPEBsG1DJ8_k-ACxgz20TsfJD1v_&sz=s5000" alt="Loading"> 
+    <img src="https://drive.google.com/thumbnail?id=1sggqXPEBsG1DJ8_k-ACxgz20TsfJD1v_&sz=s5000" alt="Loading failed. please refresh the page"> 
 </div>
 <div id="img10" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=1zjy3PUVF88n4v2iHE5-mi9Nx70eBHgql&sz=s5000" alt="Loading"> 
+    <img src="https://drive.google.com/thumbnail?id=1zjy3PUVF88n4v2iHE5-mi9Nx70eBHgql&sz=s5000" alt="Loading failed. please refresh the page"> 
 </div>
 
 <div id="img11" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=1d3TJOneT4flegp210rmGm3LwXKx6a9NZ&sz=s5000" alt="Loading"> 
+    <img src="https://drive.google.com/thumbnail?id=1d3TJOneT4flegp210rmGm3LwXKx6a9NZ&sz=s5000" alt="Loading failed. please refresh the page"> 
 </div>
 
 <div id="img12" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=1kncCuOlH0R4R7G3TBWt7hj7gElDU1VoD&sz=s5000" alt="Loading"> 
+    <img src="https://drive.google.com/thumbnail?id=1kncCuOlH0R4R7G3TBWt7hj7gElDU1VoD&sz=s5000" alt="Loading failed. please refresh the page"> 
 </div>
 <div id="img13" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=1ikiNewMIAJPfnb9DE-t64qyKbjXVPeOv&sz=s5000" alt="Loading"> 
+    <img src="https://drive.google.com/thumbnail?id=1ikiNewMIAJPfnb9DE-t64qyKbjXVPeOv&sz=s5000" alt="Loading failed. please refresh the page"> 
 </div>
 
 <div id="img14" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=1h5NtysYFfq9q2ww1R3zxX2j85Rvhwy76&sz=s5000" alt="Loading"> 
+    <img src="https://drive.google.com/thumbnail?id=1h5NtysYFfq9q2ww1R3zxX2j85Rvhwy76&sz=s5000" alt="Loading failed. please refresh the page"> 
 </div>
 <div id="img15" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=1XZXT9S-3U98hAOleKG8W9-43CER98EZK&sz=s5000" alt="Loading"> 
+    <img src="https://drive.google.com/thumbnail?id=1XZXT9S-3U98hAOleKG8W9-43CER98EZK&sz=s5000" alt="Loading failed. please refresh the page"> 
 </div>
 <div id="img16" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=1P-KVp0eXm7JDVmWnenOHpNCMc1-Hx1Qo&sz=s5000" alt="Loading"> 
+    <img src="https://drive.google.com/thumbnail?id=1P-KVp0eXm7JDVmWnenOHpNCMc1-Hx1Qo&sz=s5000" alt="Loading failed. please refresh the page"> 
 </div>
 <div id="img17" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=1v7D9Q6xwMAfc1XvU5kptx7F6rRlER-QE&sz=s5000" alt="Loading"> 
+    <img src="https://drive.google.com/thumbnail?id=1v7D9Q6xwMAfc1XvU5kptx7F6rRlER-QE&sz=s5000" alt="Loading failed. please refresh the page"> 
 </div>
 <div id="img18" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=1pjo-rkqCt_R--NBwY4fN6Sq_LhSKnFJo&sz=s5000" alt="Loading"> 
+    <img src="https://drive.google.com/thumbnail?id=1pjo-rkqCt_R--NBwY4fN6Sq_LhSKnFJo&sz=s5000" alt="Loading failed. please refresh the page"> 
 </div>
 <div id="img19" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=1Mut_qLSd2dBWNRN86qYHkfmuCj8K1QOU&sz=s5000" alt="Loading"> 
+    <img src="https://drive.google.com/thumbnail?id=1Mut_qLSd2dBWNRN86qYHkfmuCj8K1QOU&sz=s5000" alt="Loading failed. please refresh the page"> 
 </div>
 <div id="img20" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=12GZIKXCNN2QutmwEtPbADQ91S3z-Dp01&sz=s5000" alt="Loading"> 
+    <img src="https://drive.google.com/thumbnail?id=12GZIKXCNN2QutmwEtPbADQ91S3z-Dp01&sz=s5000" alt="Loading failed. please refresh the page"> 
 </div>
 <div id="img21" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=1w89FBSpB5THgYS628BRACxEFjm7LZ7ya&sz=s5000" alt="Loading"> 
+    <img src="https://drive.google.com/thumbnail?id=1w89FBSpB5THgYS628BRACxEFjm7LZ7ya&sz=s5000" alt="Loading failed. please refresh the page"> 
 </div>
 <div id="img22" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=1-f8Lkciey398yM2w6i-eeS0y1IGAGn3J&sz=s5000" alt="Loading"> 
+    <img src="https://drive.google.com/thumbnail?id=1-f8Lkciey398yM2w6i-eeS0y1IGAGn3J&sz=s5000" alt="Loading failed. please refresh the page"> 
 </div>
 <div id="img23" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=1zlCf0_qz8b2o25ENeIC6TpB_zH7rGOdv&sz=s5000" alt="Loading"> 
+    <img src="https://drive.google.com/thumbnail?id=1zlCf0_qz8b2o25ENeIC6TpB_zH7rGOdv&sz=s5000" alt="Loading failed. please refresh the page"> 
 </div>
 <div id="img24" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=1uOR5xFknMgWMLC762KidGSpXW047KEVD&sz=s5000" alt="Loading"> 
+    <img src="https://drive.google.com/thumbnail?id=1uOR5xFknMgWMLC762KidGSpXW047KEVD&sz=s5000" alt="Loading failed. please refresh the page"> 
 </div>
 <div id="img25" class="modal">
     <a href="#portfolio-grid" class="close">&times;</a>
-    <img src="https://drive.google.com/thumbnail?id=1jHegbAPYV4fDIV8xAQs6bu7pgU-hRflV&sz=s5000" alt="Loading"> 
+    <img src="https://drive.google.com/thumbnail?id=1jHegbAPYV4fDIV8xAQs6bu7pgU-hRflV&sz=s5000" alt="Loading failed. please refresh the page"> 
 </div>
+<div id="img26" class="modal">
+    <a href="#portfolio-grid" class="close">&times;</a>
+    <img src="https://drive.google.com/thumbnail?id=1hBqd6bn_5rArgsllAT3ebLB3PtLLrmD2&sz=s5000" alt="Loading failed. please refresh the page"> 
+</div>
+<div id="img27" class="modal">
+    <a href="#portfolio-grid" class="close">&times;</a>
+    <img src="https://drive.google.com/thumbnail?id=1Kz05O6BvWvt-AygId5-uF9xBWB1Bq92O&sz=s5000" alt="Loading failed. please refresh the page"> 
+</div>
+<div id="img28" class="modal">
+    <a href="#portfolio-grid" class="close">&times;</a>
+    <img src="https://drive.google.com/thumbnail?id=1b4m7xHNv5wVbIKOCZnT8_lIuYHESTJ8Y&sz=s5000" alt="Loading failed. please refresh the page"> 
+</div>
+
+
+
+
+
+
+
 <footer>
     <div class="container">
       <p>&copy; 2025 Bihandu Sathmira. All rights reserved.</p>
