--- a/others.html
+++ b/others.html
@@ -51,17 +51,40 @@
       </div>
   
       <!-- Project 2 (Reversed) -->
+       <!--  
       <div class="project">
         <div class="media">
           <iframe src="https://www.youtube.com/embed/samplevideo2" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="text">
-          <h3>Project Title 2</h3>
-          <p>Another description for the next piece of work.</p>
+          <h3>titl</h3>
+          <p>desc.</p>
         </div>
       </div>
-  
-      <!-- Add more with alternating .reverse class -->
+  -->
+      
+    </div>
+
+    <div class="container">
+      <h2>Music</h2>
+    <div class="project" style="align-items: self-start;">
+        <div class="text">
+          <h3>Producing work</h3>
+          
+          <li>Role: Co-Producer</li>
+          <li>Year: 2025</li>
+          <li>Link: <a href="https://youtu.be/J14IXq3oIbw" target="_blank">https://youtu.be/J14IXq3oIbw</a></li>
+
+
+        </div>
+        <div class="media">
+          <iframe src="https://www.youtube.com/embed/samplevideo2" frameborder="0" allowfullscreen></iframe>
+        </div>
+
+
+
+      </div>
+
     </div>
   </section>
   <section>
