--- a/photowrk.html
+++ b/photowrk.html
@@ -13,7 +13,8 @@
 
 
 
-<h1>My Photography Portfolio</h1>
+<h1>Photography Portfolio</h1>
+<h5 style="text-align: center; ">-Bihandu Sathmira-</h5>
 <!-- https://drive.google.com/thumbnail?id=1p8Hy7pedVmKQYhjPqsPv0bKLfhwvTHH2&sz=s1000 -->
 
 <!-- <a href="#img1" class="portfolio-item">
