--- a/others.html
+++ b/others.html
@@ -33,7 +33,7 @@
           <li>Location: Hacker House - Podcast Studio</li>
           <li>Role: Videographer</li>
           <li>Year: 2025</li>
-          <li>Link: <a href="https://web.facebook.com/watch/?v=1753250101912220" target="_blank">Watch on Facebook</a></li>
+          <li> <a href="https://web.facebook.com/watch/?v=1753250101912220" target="_blank">Watch on Facebook</a></li>
 
 
         </div>
@@ -70,15 +70,16 @@
     <div class="project" style="align-items: self-start;">
         <div class="text">
           <h3>Producing work</h3>
-          
-          <li>Role: Co-Producer</li>
+          <li>Performed by Sasinu D & Killer X</li>
+          <li>My Role: Co-Producer</li>
           <li>Year: 2025</li>
-          <li>Link: <a href="https://youtu.be/J14IXq3oIbw" target="_blank">https://youtu.be/J14IXq3oIbw</a></li>
+          <li>Cast - Sasinu Dulak, Anushmika Chasmi, Prabudda Priyankara</li>
+          <li>Watch on youtube: <a href="https://youtu.be/J14IXq3oIbw" target="_blank">https://youtu.be/J14IXq3oIbw</a></li>
 
 
         </div>
         <div class="media">
-          <iframe src="https://www.youtube.com/embed/samplevideo2" frameborder="0" allowfullscreen></iframe>
+          <iframe width="280" height="157.5" src="https://www.youtube.com/embed/J14IXq3oIbw?si=PdfqzfiuxaEzDvDo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
 
