--- a/itwrk.html
+++ b/itwrk.html
@@ -9,10 +9,10 @@
 <body>
 
   <!-- Hero Section -->
-  <section class="hero hero-plainbackground" >
+  <section class="hero hero-darkbackground" >
     <div class="hero-content">
       <h1>My Portfolio</h1>
-      <p class="scroll-hint">Scroll ↓</p>
+      <p class="scroll-hint" style="font-weight: 1000; font-size: 2.5em; animation: bounce 1.5s infinite;">Scroll ↓</p>
     </div>
   </section>
 
@@ -28,7 +28,7 @@
         <div class="text">
           <h3>Website Load Tester Application</h3>
           <p>This app is equipped with 25 browsers,</p>
-          <p>and it is designed to drive traffic to any website.</p>
+          <p>Designed to drive traffic to any website.</p>
           <p>It can test a website's server strength under a load of 25 people at once, by loading the same webpage to 25 browser elements</p>
           <p>Development for this app is ended and not complete since my play console was ruined by a scammer, the app is no longer available in Google Play Store.</p>
           <p>However, you can still download the last published APK build from <a href="https://apkpure.com/25-boom-browser-main/com.bihandu.apps.arcade.and.entertainment.boom25browser">APKPure</a></p>
