--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>My Portfolio</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    .necard{
+      box-shadow: 0px 2px 5px rgba(0,0,0,0.4);
+    }
+  </style>
 </head>
 <body>
 
@@ -23,7 +28,7 @@
   
       <!-- Project 1 -->
       <div class="projectn">
-        <div class="necard" onclick="window.location.href='itwrk.html'">
+        <div class="necard"  onclick="window.location.href='itwrk.html'">
           <h3>My IT-Related Work</h3>
           <img src="lupc.png"  alt="couldn't load image, refresh the page" style="border: 0px; box-shadow: none;">
         </div>
