--- a/itwrk.html
+++ b/itwrk.html
@@ -322,7 +322,9 @@
   <section class="contact">
     <div class="container">
       <h2>Looks good? Contact Me</h2>
-      <p>Email: <a href="mailto:yourname@example.com">sathmirabihandu@gmail.com</a></p>
+      <p>Email: <a href="mailto:yourname@example.com">sathmirabihandu@gmail.com</a></p><br>
+      <h5 style="font-size: large;"><a href="index.html">see my other works</a></h5>
+      
     </div>
   </section>
 
