--- a/others.html
+++ b/others.html
@@ -31,7 +31,7 @@
           <li>Client: Fourdanz (PVT)LTD </li>
           <li>Cast: AN Edition (Amila, Nishen)</li>
           <li>Location: Hacker House - Podcast Studio</li>
-          <li>Role: Videographer</li>
+          <li>My role: Videographer</li>
           <li>Year: 2025</li>
           <li> <a href="https://web.facebook.com/watch/?v=1753250101912220" target="_blank">Watch on Facebook</a></li>
 
@@ -71,7 +71,7 @@
         <div class="text">
           <h3>Producing work</h3>
           <li>Performed by Sasinu D & Killer X</li>
-          <li>My Role: Co-Producer</li>
+          <li>My role: Co-Producer</li>
           <li>Year: 2025</li>
           <li>Cast - Sasinu Dulak, Anushmika Chasmi, Prabudda Priyankara</li>
           <li>Watch on youtube: <a href="https://youtu.be/J14IXq3oIbw" target="_blank">https://youtu.be/J14IXq3oIbw</a></li>
