--- a/photowrk.html
+++ b/photowrk.html
@@ -146,6 +146,10 @@
     <img src="https://drive.google.com/thumbnail?id=1b4m7xHNv5wVbIKOCZnT8_lIuYHESTJ8Y&sz=s700" alt="image is not loading, please refresh the page" style="width: 100%; height: auto;">
 </a>
 
+<a href="https://web.facebook.com/BihanduPhotography/" class="portfolio-item" >
+    <img src="https://drive.google.com/thumbnail?id=1l125PoatF8BG2lDf2kSBXMiI8EKXXDhi&sz=s700" alt="image is not loading, please refresh the page" style="width: 100%; height: auto;">
+</a>
+
 
 
 
