--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           <img src="camcam.jpg" alt="couldn't load image, refresh the page" style="border: 0px; box-shadow: none; width: 60%; height: auto; margin: 25px;">
         </div>
 
-        <div class="necard" onclick="window.location.href='Others.html'">
-          <h3>others</h3>
+        <div class="necard" onclick="window.location.href='others.html'">
+          <h3>Others</h3>
           <img src="qmark.png" alt="couldn't load image, refresh the page" style="border: 0px; box-shadow: none; width: 60%; height: auto; margin: 25px;">
 
 
