--- a/others.html
+++ b/others.html
@@ -20,10 +20,42 @@
   <section class="portfolio">
     <div class="container">
       <h2>Videography work</h2>
+
+
+
+
+<!-- <div class="project" style="align-items: self-start;">
+        <div class="text" style="">
+          <h3>Video Commercial</h3>
+          <p>This is a commercial video done for Fourdanz (PVT)LTD </p>
+          <p>Everything from Composition, Lighting and Filming was done by me</p>
+          <br>
+          <li>Client: Fourdanz (PVT)LTD </li>
+          <li>Cast: AN Edition (Amila, Nishen)</li>
+          <li>Location: Hacker House - Podcast Studio</li>
+          <li>My role: Videographer</li>
+          <li>Year: 2025</li>
+          <li> <a href="https://web.facebook.com/watch/?v=1753250101912220" target="_blank">Watch on Facebook</a></li>
+
+
+        </div>
+        <div class="media" >
+
+          <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fweb.facebook.com%2Ffourdanz%2Fvideos%2F1753250101912220%2F&show_text=false&width=267&t=0" width="267" height="476" style="border:none; max-height: none; overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true" ></iframe>
+        </div>
+</div> -->
+
+
+
+
+
+
+
+      
   
       <!-- Project 1 -->
       <div class="project" style="align-items: self-start;">
-        <div class="text">
+        <div class="text" style="">
           <h3>Video Commercial</h3>
           <p>This is a commercial video done for Fourdanz (PVT)LTD </p>
           <p>Everything from Composition, Lighting and Filming was done by me</p>
