--- a/itwrk.html
+++ b/itwrk.html
@@ -318,13 +318,21 @@
     
   </section>
 
-  <!-- Contact Section -->
   <section class="contact">
     <div class="container">
-      <h2>Looks good? Contact Me</h2>
-      <p>Email: <a href="mailto:yourname@example.com">sathmirabihandu@gmail.com</a></p><br>
-      <h5 style="font-size: large;"><a href="index.html">see my other works</a></h5>
-      
+      <h2>Contact Me</h2>
+      <p>Email: <a href="mailto:sathmirabihandu@gmail.com">sathmirabihandu@gmail.com</a></p>
+      <button onclick="copyemail()" class="copytoclipboardbutton">Copy to clipboard</button>
+      <script>
+        function copyemail() {
+          const email = "sathmirabihandu@gmail.com";
+            navigator.clipboard.writeText(email).then(() => {
+                alert("Email copied to clipboard!");
+            }).catch(err => {
+                console.error("Failed to copy email: ", err);
+            });
+        }
+      </script>
     </div>
   </section>
 
