--- a/editingwrk.html
+++ b/editingwrk.html
@@ -27,7 +27,7 @@
     </style>
     <div class="hero-content">
       <h1>Edits by me</h1>
-      <p class="scroll-hint">Scroll ↓</p>
+      <p class="scroll-hint" style="font-weight: 1000; font-size: 2.5em; animation: bounce 1.5s infinite;">Scroll ↓</p>
     </div>
   </section>
 
