addded more details

--- a/itwrk.html
+++ b/itwrk.html
@@ -676,33 +676,37 @@ You can try the tool on <a href="https://github.com/BihanDoo/RunAsInvokerTool" s
 
 
 
-<!-- 
+
   <section>
-    <h2>Wanna See My Other Work?</h2>
+    <h2>What else?</h2>
     <div class="projects">
-      <div class="card">
-        <h3>Automated Backup System</h3>
-        <p>A Windows-based tool that detects removable drives and automatically backs up critical folders.</p>
+      <div class="card" onclick="window.location.href='photowrk.html?refcode=' + refcode" type="Submit">
+        <h3>Photographer</h3>
+        <p>Don't Have a Guy to Take that "Memorable" Group Photo? </p>
+        <strong><p>I can do it Too!</p></strong>
         <div class="tags">
-          <span>C#</span><span>.NET</span><span>Windows</span>
+          <!-- show the span as clickable when mouse pointer hovers over it --> 
+          <span onclick="window.location.href='photowrk.html?refcode=' + refcode" type="Submit">View Portfolio</span>   
         </div>
       </div>
       <div class="card">
-        <h3>Custom File Manager</h3>
-        <p>Python GUI file manager with media previews, batch renaming, and smart navigation.</p>
+        <h3>Video Editor</h3>
+        <p>Your company's Social Media page needs that missing puzzle piece of a Video Editor?</p>
+        <p>Here I am!</p>
         <div class="tags">
-          <span>Python</span><span>CustomTkinter</span>
+          <span onclick="window.location.href='editingwrk.html?refcode=' + refcode" type="Submit">View Portfolio</span>
         </div>
       </div>
       <div class="card">
-        <h3>Self-Hosted Server</h3>
-        <p>Low-budget Windows server hosting a Minecraft server and private file cloud.</p>
-        <div class="tags">
-          <span>Windows</span><span>Networking</span><span>Servers</span>
+        <h3>Graphic Designer</h3>
+        <p>Your company suffering without a Graphic Designer?</p>
+        <p>Well, you won't find anyone else</p>
+           <div class="tags">
+          <span>portfolio coming soon</span>
         </div>
       </div>
     </div>
-  </section> -->
+  </section> 
 
 
 
