--- a/itwrk.html
+++ b/itwrk.html
@@ -716,6 +716,7 @@ You can try the tool on <a href="https://github.com/BihanDoo/RunAsInvokerTool" s
 
   <footer>
     © 2026 Bihandu Sathmira · All rights reserved.
+    <br>Contact: <a href="mailto:sathmirabihandu@gmail.com">sathmirabihandu@gmail.com</a>
   </footer>
 
   <div id="modal" class="modal" onclick="hideModal()">
